[metadata]
name = Py-sc-client
description-file=README.md
license_files=LICENSE

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.8

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    sc_client
    tests

[coverage:paths]
source =
    src
